# mem0-chrome-extension-local

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
extension/: manifest.json  popup.js  sidebar.js
extension/chatgpt/: content.js
extension/claude/: content.js
extension/deepseek/: content.js
extension/grok/: content.js
extension/perplexity/: content.js
server/: README_ENHANCED.md  config.py  configure_local.py  deterministic_llm_config.py  local_mem0_with_rag.py  setup_env.py
server/scripts/: __init__.py  list_memories.py  run_tests.py  run_tests.sh  setup_env.py  start_mem0.py  start_mem0.sh
server/tests/: MEMORY_QUALITY_ANALYSIS.md  README.md  TESTING_GUIDE.md  conftest.py  test_comprehensive.py  test_deterministic_mem0.py  test_deterministic_mem0.py.bak2  test_enhanced_server.py  test_llm_intention.py  test_mem0_comparison.py  test_memory_protection.py  test_memory_quality.py  test_memory_quality_enhanced.py  test_quality_focused.py
tests/: conftest.py  pytest.ini  test_contradiction_analysis.py  test_individual_memories.py  test_llm_deletion_reasoning.py  test_memory_behavior.py  test_search_improvements.py  test_semantic_purging.py  test_semantic_purging_summary.py
